--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,18 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.2.0'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	// Android Publisher API
+	implementation 'com.google.apis:google-api-services-androidpublisher:v3-rev20240917-2.0.0'
+
+	// OAuth2 HTTP Authentication Library
+	implementation 'com.google.auth:google-auth-library-oauth2-http:1.17.0'
+
+	// Google API client
+	implementation 'com.google.api-client:google-api-client:1.34.0'
+
+	// Google API client - Jackson 2 support
+	implementation 'com.google.http-client:google-http-client-jackson2:1.41.8'
 }
 
 tasks.named('test') {
